# adventOfCode2024

./: .gitignore  CMakeLists.txt  README.md  functions.cpp  functions.h  main.cpp
day1/: CMakeLists.txt  day1.cpp  day1.h
day2/: CMakeLists.txt  day2.cpp  day2.h
day3/: CMakeLists.txt  day3.cpp  day3.h  testInputDay3.txt
day4/: CMakeLists.txt  day4.cpp  day4.h
day5/: CMakeLists.txt  day5.cpp  day5.h
day6/: CMakeLists.txt  day6.cpp  day6.h  day6fail.cpp
day7/: CMakeLists.txt  day7.cpp  day7.h
day9/: CMakeLists.txt  day9.cpp  day9.h
